fixed overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@
     font-family: 'Nunito', sans-serif;
 }
 
+html{
+    overflow-x: hidden;
+}
+
 /* Header */
 
 .nav-elements{
